# vzlogger

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists-pico.txt  CMakeLists.txt  Dockerfile  GITHUB_RELEASE.txt  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.InfluxDB.md  README.md  README.mysmartgrid  README.mysmartgrid.md  aclocal.m4  check-formatting.sh  clean-all-cmake.txt  compose.yaml  config.h.in  config.hpp.in  config.yaml  configure  configure.ac  index.html  install.sh  lwipopts.h  lwipopts_examples_common.h  schema.json  vzlogger_buildroot_builder.Dockerfile  vzlogger_dockerx.Dockerfile
.github/workflows/: build+test.yml  build_buildroot.yml  check-formatting.yml  debuild.yml  docker-build.yml  docker.yml  docker_vzlogger.yml
Dashboards/: CTestConfigVZlogger.cmake  KDECTestNightly.cmake  Tools.cmake  VZLoggerCoverage.cmake  VZLoggerNightly.cmake  VZloggerNightly_1.cmake  VZloggerNightly_2.cmake  VZloggerNightly_clang.cmake  run_nightly
cfg/: vzlogger.conf
debian/: DEBIAN_RELEASE.txt  Debian_release.patch  changelog  clean  control  copyright  rules  vzlogger.1.md  vzlogger.8.md  vzlogger.docs  vzlogger.examples  vzlogger.init  vzlogger.install  vzlogger.manpages  vzlogger.postinst  vzlogger.postrm  vzlogger.service  vzlogger.sysusers  vzlogger.tmpfiles  watch
debian/patches/: just-works-conf  remove-time-assert  series
debian/source/: lintian-overrides
docs/: Makefile  Makefile.in
etc/: vzlogger-1.conf  vzlogger.conf  vzlogger.conf.InfluxDB  vzlogger.conf.meterOCR  vzlogger.conf.meterOMS  vzlogger.conf.mySmartGrid  vzlogger.conf.sos_s0_reader  vzlogger.service  vzlogger_generic.schema.json  vzlogger_generic.schema.json.todo  vzlogger_init_d0.sh
etc/logrotate.d/: vzlogger
gmock/: CMakeLists.txt
gtest/: CMakeLists.txt  CMakeLists.txt.in
include/: ApiIF.hpp  Buffer.hpp  Channel.hpp  Config_Options.hpp  CurlSessionProvider.hpp  Json.hpp  Meter.hpp  MeterMap.hpp  Ntp.hpp  Obis.hpp  Options.hpp  PushData.hpp  Reading.hpp  TransferBuffer.hpp  VZException.hpp  api.h  buffer.h  channel.h  common.h  config.h  d0.h  exception.h  exec.h  file.h  fluksov2.h  gitSha1.h  json.hpp  list.h  local.h  meter.h  meter_protocol.hpp  mqtt.hpp  mqtt_ha_discovery.hpp  obis.h  onewire.h  options.h  random.h  reading.h  s0.h  shared_ptr.hpp  (+4 more)
include/api/: CurlCallback.hpp  CurlIF.hpp  CurlResponse.hpp  InfluxDB.hpp  LwipIF.hpp  MQTT.hpp  MySmartGrid.hpp  Null.hpp  Volkszaehler.hpp  hmac.h
include/protocols/: MeterChinaDC.hpp  MeterD0.hpp  MeterEmonLib.hpp  MeterExec.hpp  MeterFile.hpp  MeterFluksoV2.hpp  MeterHCSR04.hpp  MeterModbus.hpp  MeterOCR.hpp  MeterOMS.hpp  MeterOnboardTemp.hpp  MeterRandom.hpp  MeterS0.hpp  MeterSCT013.hpp  MeterSML.hpp  MeterSOS_S0.hpp  MeterW1thGpio.hpp  MeterW1therm.hpp  Protocol.hpp  d0.h  exec.h  file.h  fluksov2.h  protocol.hpp  random.h  s0.h  sml.h
js/: strip-json-comments.js
libs/: CMakeLists.txt
libs/EmonLib-vz/: CMakeLists.txt  EmonLib_pico.cpp  WProgram.h
libs/json-c/: CMakeLists.txt  config.h  json_config.h
modules/: CompilerFlags.cmake  ConfigureMacro.cmake  DebDependencies.cmake  FindCURL_WIN32.cmake  FindCurl.cmake  FindGnutls.cmake  FindJson.cmake  FindLeptonica.cmake  FindMBus.cmake  FindMicroHttpd.cmake  FindSML.cmake  GetGitRevisionDescription.cmake  OpenWRT.cmake  UseCodeCoverage.cmake
src/: Buffer.cpp  CMakeLists.txt  Channel.cpp  Config_Options.cpp  CurlSessionProvider.cpp  Makefile  Makefile.am  Makefile.in  Meter.cpp  MeterMap.cpp  Ntp.cpp  Obis.cpp  Options.cpp  PushData.cpp  Reading.cpp  VzPicoSys.cpp  VzPicoSys.h  VzPicoWifi.cpp  VzPicoWifi.h  api.c  api.cpp  buffer.c  buffer.cpp  channel.c  channel.cpp  config.c  config.cpp  d0.c  exception.cpp  exec.c  file.c  fluksov2.c  gitSha1.cpp.in  local.c  local.cpp  ltqnorm.c  ltqnorm.cpp  meter.c  meter.cpp  mqtt.cpp  (+19 more)
src/api/: CMakeLists.txt  CurlCallback.cpp  CurlIF.cpp  CurlResponse.cpp  InfluxDB.cpp  LwipIF.cpp  MQTT.cpp  MySmartGrid.cpp  Null.cpp  Volkszaehler.cpp  hmac.cpp
src/protocols/: CMakeLists.txt  MeterChinaDC.cpp  MeterD0.cpp  MeterEmonLib.cpp  MeterExec.cpp  MeterFile.cpp  MeterFluksoV2.cpp  MeterHCSR04.cpp  MeterModbus.cpp  MeterOCR.cpp  MeterOCRTesseract.cpp  MeterOMS.cpp  MeterOnboardTemp.cpp  MeterRandom.cpp  MeterS0.cpp  MeterSCT013.cpp  MeterSML.cpp  MeterSOS_S0.cpp  MeterW1thGpio.cpp  MeterW1therm.cpp  d0.c  d0.cpp  exec.c  exec.cpp  file.c  file.cpp  fluksov2.c  fluksov2.cpp  random.c  random.cpp  s0.c  s0.cpp  sml.c  sml.cpp
tests/: CMakeLists.txt  MeterD0.cpp  MeterSML.cpp  example_test.cpp  main.cpp  ut_CurlSessionProvider.cpp  ut_MeterExec.cpp  ut_MeterFile.cpp  ut_MeterOCR.cpp  ut_MeterOCR.cpp.in  ut_MeterOCRTesseract.cpp  ut_PushData.cpp  ut_TransferBuffer.cpp  ut_api_hmac.cpp  ut_api_volkszaehler.cpp  ut_api_volkszaehler.cpp.in  ut_buffer.cpp  ut_meter.cpp  ut_mqtt_ha_discovery.cpp  ut_obis.cpp
tests/include/: test_config.hpp.in
tests/mocks/: CMakeLists.txt  Channel.hpp  mock_MeterOMS.cpp  mock_MeterS0.cpp  mock_MeterW1therm.cpp  mock_metermap.cpp
tests/mocks/protocols/: MeterOCR.hpp
